# StudentManagementSystem

./: CMakeLists.txt  README.md
src/: Course.h  CourseList.h  GeneralProgramStudent.h  NormalCourse.h  Rational.h  SpecialProgramStudent.h  SummerCourse.h
